--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravelcollective/html": "^5.4.0",
         "rap2hpoutre/laravel-log-viewer": "^0.11.0",
         "reliese/laravel": "^0.0.13",
-        "yajra/laravel-datatables-oracle": "^8.3"
+        "yajra/laravel-datatables-oracle": "^8.3",
+        "guzzlehttp/guzzle": "~6.0"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
