--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "rap2hpoutre/laravel-log-viewer": "^0.11.0",
         "reliese/laravel": "^0.0.13",
         "yajra/laravel-datatables-oracle": "^8.3",
-        "guzzlehttp/guzzle": "~6.0"
+        "guzzlehttp/guzzle": "~6.0",
+        "cviebrock/eloquent-sluggable": "^4.3"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
